[package]
name = "webrs"
version = "0.1.0"
authors = ["Aleksey Kuznetsov <zummenix@gmail.com>"]

[dependencies]
iron = "0.2.5"
router = "0.0.16"
urlencoded = "0.2.0"
serde_json = "0.6.0"
r2d2 = "0.6.1"
r2d2_postgres = "0.9.3"
iron-postgres-middleware = { git = "https://github.com/martinsp/iron-postgres-middleware", version = "0.0.3"}
